2007-10-24  David Gilbert  <david.gilbert@object-refinery.com>

	* experimenta/org/jfree/experimental/chart/plot/dial/*.java:
	Moved this package to org.jfree.chart.plot.dial.*,
	* experimenta/org/jfree/experimental/chart/plot/dial/junit/*.java:
	Moved this package to org.jfree.chart.plot.dial.junit.*.

2007-10-24  David Gilbert  <david.gilbert@object-refinery.com>

	* experimental/org/jfree/experimental/chart/plot/dial/StandardDialFrame.java:
	Removed and renamed ArcDialFrame.java,
	* experimental/org/jfree/experimental/chart/plot/dial/ArcDialFrame.java:
	New file.

2007-10-24  David Gilbert  <david.gilbert@object-refinery.com>

	* experimental/org/jfree/experimental/chart/plot/dial/DialPlot.java
	(pointers): New field,
	(DialPlot): Delegate to new constructor,
	(DialPlot(ValueDataset)): New constructor,
	(addPointer): New method,
	(getPointerIndex): Likewise,
	(removePointer(int)): Likewise,
	(removePointer(DialPointer)): Likewise,
	(getPointerForDataset): Likewise,
	(draw): Draw pointers in their own layer,
	(equals): Check new pointers field,
	* experimental/org/jfree/experimental/chart/plot/dial/DialPointer.java:
	Implemented PublicCloneable,
	(DialPointer): Changed to protected,
	(DialPointer(int)): Likewise, and changed default radius,
	(Pin.setPaint): Added argument check,
	(Pin.setStroke): Likewise,
	(Pointer(int)): Removed radius setting,
	* experimental/org/jfree/experimental/chart/plot/dial/DialTextAnnotation.java
	(getAnchor): New method,
	(setAnchor): Likewise,
	* experimental/org/jfree/experimental/chart/plot/dial/DialValueIndicator.java
	(DialValueIndicator): New constructor,
	(DialValueIndicator(int, String)): Removed string argument,
	(setDatasetIndex): Fire change event,
	(setTemplateValue): Check for null argument,
	* experimental/org/jfree/experimental/chart/plot/dial/StandardDialFrame.java
	(setInnerRadius): Added argument check,
	(setOuterRadius): Likewise,
	* experimental/org/jfree/experimental/chart/plot/dial/StandardDialRange.java